--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Bruno Carlos Soares"/>
     <meta name="description" content="Criando uma simples calculadora utilizando React Vite"/>
     <meta name="keywords" content="React, Vite, Calculadora"/>
-    <!--<link rel="shortcut icon" href="" type="image/x-icon"/>-->
+    <link rel="shortcut icon" href="icons8-calculadora-64.png" type="image/x-icon"/>
     <title>Calculadora</title>
   </head>
   <body>
